Use multi-stage build and replace CMD with ENTRYPOINT
This commit switches away from the esdocker CMD to an ENTRYPOINT.
The ENTRYPOINT (`/usr/local/bin/docker-entrypoint.sh`) combines Docker
+ Kubernetes + Openshift best practices.

The group ownership of `/usr/share/elasticsearch` is now 0, so in the
case of Openshift, or forcing `--user <other_uid>`, elasticsearch can
still run and write to bind mounted directories. The root group
doesn't grant any additional special permissions, so should somehow the
elasticsearch process in the container be compromised, it can't access/mutate
critical files from the host os, even if `/` is mounted in the container.

Optionally, a `TAKE_FILE_OWNERSHIP` env var can be explicitly used to
override the UID:GID of the `data` and `logs` dirs as well, when the
ENTRYPOINT is allowed to run as the default root user (i.e. not in Openshift).

It's still possible to run another CMD, through the ENTRYPOINT, such
as `/bin/bash` to inspect things or directly `bin/elasticsearch -Ex.y=z`[1].

Finally, CTRL-C is now handled more appropriately, when using the
image interactively.

There are four new tests to check gid ownership of extracted files and running 
elasticsearch with different combinations of bind-mounted host data directories
and process uids.

[1]: https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html#_d_override_the_image_8217_s_default_ulink_url_https_docs_docker_com_engine_reference_run_cmd_default_command_or_options_cmd_ulink

Relates #125

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -1,4 +1,9 @@
+################################################################################
 # This Dockerfile was generated from the template at templates/Dockerfile.j2
+#
+# Beginning of multi stage Dockerfile
+################################################################################
+
 {% set ingest_plugins = 'ingest-user-agent ingest-geoip' %}
 {% set version_tag = elastic_version -%}
 {% set tarball = 'elasticsearch-%s.tar.gz' % elastic_version -%}
@@ -16,22 +21,26 @@
 {%   set url_root = 'https://artifacts.elastic.co/downloads/elasticsearch' -%}
 {% endif -%}
 
-{# Use a centos base that has openjdk-1.8.0.b141 pre-installed and excluded from yum.conf,
-until potential issues with build 144 have been troubleshooted #}
-FROM docker.elastic.co/elasticsearch/centos-base:7.3-jvm141
-LABEL maintainer "Elastic Docker Team <docker@elastic.co>"
+################################################################################
+# Build stage 0 `prep_es_files`:
+# Extract elasticsearch artifact
+# Install required plugins
+# Set gid=0 and make group perms==owner perms
+################################################################################
 
-ENV ELASTIC_CONTAINER true
+FROM docker.elastic.co/elasticsearch/centos-base:7.3-jvm141 AS prep_es_files
+
 ENV PATH /usr/share/elasticsearch/bin:$PATH
 ENV JAVA_HOME /usr/lib/jvm/jre-1.8.0-openjdk
 
-RUN yum update -y && yum install -y java-1.8.0-openjdk-headless unzip wget which && yum clean all
+RUN yum install -y unzip
 
-RUN groupadd -g 1000 elasticsearch && adduser -u 1000 -g 1000 -d /usr/share/elasticsearch elasticsearch
+RUN groupadd -g 1000 elasticsearch && \
+    adduser -u 1000 -g 1000 -d /usr/share/elasticsearch elasticsearch
 
 WORKDIR /usr/share/elasticsearch
 
-USER elasticsearch
+USER 1000
 
 # Download and extract defined ES version.
 RUN curl -fsSL {{ url_root }}/{{ tarball }} | \
@@ -62,60 +71,74 @@ RUN for PLUGIN in {{ ingest_plugins }}; do \
 RUN for PLUGIN in x-pack {{ ingest_plugins }}; do \
   {% else -%}
 RUN for PLUGIN in {{ ingest_plugins }}; do \
-  {%- endif %}
-      elasticsearch-plugin install --batch "$PLUGIN"; \
-    done
+  {%- endif -%}
+      elasticsearch-plugin install --batch "$PLUGIN"; done
 {%- endif %}
 
-USER root
-
-{# A fair bit of duplication here, but making line breaks and '\' consistent
-   coupled with jinja2 conditionals is complicated.
--#}
-
-{% if image_flavor == 'oss' -%}
-COPY elasticsearch.yml log4j2.properties config/
-COPY bin/es-docker bin/es-docker
-
-RUN chown elasticsearch:elasticsearch \
-      config/elasticsearch.yml \
-      config/log4j2.properties \
-      bin/es-docker && \
-    chmod 0750 bin/es-docker
-{% elif image_flavor == 'basic' -%}
-COPY elasticsearch.yml log4j2.properties config/
-RUN echo 'xpack.license.self_generated.type: basic' >>config/elasticsearch.yml
-COPY x-pack/log4j2.properties config/x-pack/
-COPY bin/es-docker bin/es-docker
-
-RUN chown elasticsearch:elasticsearch \
-      config/elasticsearch.yml \
-      config/log4j2.properties \
-      config/x-pack/log4j2.properties \
-      bin/es-docker && \
-    chmod 0750 bin/es-docker
-{% elif image_flavor == 'platinum' -%}
-COPY elasticsearch.yml certgen_instances.yml log4j2.properties config/
-COPY x-pack/log4j2.properties config/x-pack/
-COPY bin/es-docker bin/es-docker
-
-RUN echo 'xpack.license.self_generated.type: trial' >>config/elasticsearch.yml
-
-RUN chown elasticsearch:elasticsearch \
-      config/certgen_instances.yml \
-      config/elasticsearch.yml \
-      config/log4j2.properties \
-      config/x-pack/log4j2.properties \
-      bin/es-docker && \
-    chmod 0750 bin/es-docker
-{% endif -%}
-
-USER elasticsearch
+COPY --chown=1000:0 elasticsearch.yml log4j2.properties config/
 
 {% if image_flavor == 'platinum' -%}
-RUN bin/x-pack/certgen -s -in config/certgen_instances.yml --out config/certs.zip && unzip -d config/x-pack/ config/certs.zip && rm config/certs.zip config/certgen_instances.yml
+COPY --chown=1000:0 certgen_instances.yml log4j2.properties config/
+COPY --chown=1000:0 x-pack/log4j2.properties config/x-pack/
+RUN echo 'xpack.license.self_generated.type: trial' >>config/elasticsearch.yml
+RUN bin/x-pack/certgen -s -in config/certgen_instances.yml --out config/certs.zip && \
+    unzip -d config/x-pack/ config/certs.zip && \
+    rm config/certs.zip config/certgen_instances.yml
+
+{% elif image_flavor == 'basic' -%}
+RUN echo 'xpack.license.self_generated.type: basic' >>config/elasticsearch.yml
 {% endif -%}
 
-CMD ["/bin/bash", "bin/es-docker"]
+USER 0
+
+# Set gid to 0 for elasticsearch and make group permission similar to that of user
+# This is needed, for example, for Openshift Open: https://docs.openshift.org/latest/creating_images/guidelines.html
+# and allows ES to run with an uid
+RUN chown -R elasticsearch:0 . && \
+    chmod -R g=u /usr/share/elasticsearch
+
+################################################################################
+# Build stage 1 (the actual elasticsearch image):
+# Copy elasticsearch from stage 0
+# Add entrypoint
+################################################################################
+
+# Use a centos base that has openjdk-1.8.0.b141 pre-installed and excluded from yum.conf
+# until potential issues with build 144 have been troubleshooted
+FROM docker.elastic.co/elasticsearch/centos-base:7.3-jvm141
+LABEL maintainer "Elastic Docker Team <docker@elastic.co>"
+
+ENV ELASTIC_CONTAINER true
+ENV PATH /usr/share/elasticsearch/bin:$PATH
+ENV JAVA_HOME /usr/lib/jvm/jre-1.8.0-openjdk
+
+RUN yum update -y && \
+    yum install -y java-1.8.0-openjdk-headless unzip wget which && \
+    yum clean all
+
+RUN groupadd -g 1000 elasticsearch && \
+    adduser -u 1000 -g 1000 -G 0 -d /usr/share/elasticsearch elasticsearch && \
+    chmod 0775 /usr/share/elasticsearch && \
+    chgrp 0 /usr/share/elasticsearch
+
+WORKDIR /usr/share/elasticsearch
+
+COPY --from=prep_es_files --chown=1000:0 /usr/share/elasticsearch /usr/share/elasticsearch
+
+COPY --chown=1000:0 bin/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+
+# Openshift overrides USER and uses ones with randomly uid>1024 and gid=0
+# Allow ENTRYPOINT (and ES) to run even with a different user
+RUN chgrp 0 /usr/local/bin/docker-entrypoint.sh && \
+    chmod g=u /etc/passwd && \
+    chmod 0775 /usr/local/bin/docker-entrypoint.sh
 
 EXPOSE 9200 9300
+
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+# Dummy overridable parameter parsed by entrypoint
+CMD ["eswrapper"]
+
+################################################################################
+# End of multi-stage Dockerfile
+################################################################################
