Deprecate default insecure TLS certs
The platinum trial license doesn't enforce ssl for transport, so
there's no need to support the ALLOW_INSECURE_DEFAULT_TLS_CERT flag
anymore, partly reverting 20e961cadf0abe34c1e5b2fd43fdd0790faa67ca.

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -78,12 +78,9 @@ RUN for PLUGIN in {{ ingest_plugins }}; do \
 COPY --chown=1000:0 elasticsearch.yml log4j2.properties config/
 
 {% if image_flavor == 'platinum' -%}
-COPY --chown=1000:0 certgen_instances.yml log4j2.properties config/
+COPY --chown=1000:0 log4j2.properties config/
 COPY --chown=1000:0 x-pack/log4j2.properties config/x-pack/
 RUN echo 'xpack.license.self_generated.type: trial' >>config/elasticsearch.yml
-RUN bin/x-pack/certgen -s -in config/certgen_instances.yml --out config/certs.zip && \
-    unzip -d config/x-pack/ config/certs.zip && \
-    rm config/certs.zip config/certgen_instances.yml
 
 {% elif image_flavor == 'basic' -%}
 RUN echo 'xpack.license.self_generated.type: basic' >>config/elasticsearch.yml
