--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -28,12 +28,12 @@
 # Set gid=0 and make group perms==owner perms
 ################################################################################
 
-FROM docker.elastic.co/elasticsearch/centos-base:7.3-jvm141 AS prep_es_files
+FROM centos:7 AS prep_es_files
 
 ENV PATH /usr/share/elasticsearch/bin:$PATH
 ENV JAVA_HOME /usr/lib/jvm/jre-1.8.0-openjdk
 
-RUN yum install -y unzip
+RUN yum install -y java-1.8.0-openjdk-headless unzip which
 
 RUN groupadd -g 1000 elasticsearch && \
     adduser -u 1000 -g 1000 -d /usr/share/elasticsearch elasticsearch
@@ -102,7 +102,7 @@ RUN chown -R elasticsearch:0 . && \
 
 # Use a centos base that has openjdk-1.8.0.b141 pre-installed and excluded from yum.conf
 # until potential issues with build 144 have been troubleshooted
-FROM docker.elastic.co/elasticsearch/centos-base:7.3-jvm141
+FROM centos:7
 LABEL maintainer "Elastic Docker Team <docker@elastic.co>"
 
 ENV ELASTIC_CONTAINER true
@@ -110,7 +110,7 @@ ENV PATH /usr/share/elasticsearch/bin:$PATH
 ENV JAVA_HOME /usr/lib/jvm/jre-1.8.0-openjdk
 
 RUN yum update -y && \
-    yum install -y java-1.8.0-openjdk-headless unzip wget which && \
+    yum install -y nc java-1.8.0-openjdk-headless unzip wget which && \
     yum clean all
 
 RUN groupadd -g 1000 elasticsearch && \
