--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -112,7 +112,7 @@ ENV JAVA_HOME /usr/lib/jvm/jre-1.8.0-openjdk
 RUN yum update -y && \
     yum install -y nc java-1.8.0-openjdk-headless unzip wget which && \
     yum clean all && \
-    yum autoremove
+    yum -y autoremove
 
 RUN groupadd -g 1000 elasticsearch && \
     adduser -u 1000 -g 1000 -G 0 -d /usr/share/elasticsearch elasticsearch && \
