Do not use host network for building image
Today the Elasticsearch Docker build relies on the host network for
building the Docker image. In particular, it requires port 8000 on the
host to be available so that the Docker build can connect to the
artifacts server that is created during an earlier phase of the build. I
ran into a strange issue where the build would repeatedly fail if using
the host network. In particular, the issue that I ran into is that the
setup package installed during yum update could not be installed because
/etc/hosts could not be extracted from the package. It is not clear to
me why this fails with the host network, but once we surmised this was a
possbility and switched to not use the host network, the issue went
anyway. Whatever the issue is, it's inherently desirable to not use the
host network during the build anyway. Instead, we can connect the
containers over a dedicated bridge network and not rely on port 8000
being available on the host. Fortunately, this fixes the issue that I
was running into as well.

Co-authored-by: Dimitrios Liappis <dimitrios.liappis@gmail.com>

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -9,9 +9,9 @@
 {% set tarball = 'elasticsearch-%s.tar.gz' % elastic_version -%}
 
 {% if artifacts_dir -%}
-{%   set url_root = 'http://localhost:8000/elasticsearch/distribution/tar/build/distributions' -%}
-{%   set x_pack_url_root = 'http://localhost:8000/x-pack-elasticsearch/plugin/build/distributions' -%}
-{%   set plugin_url_root = 'http://localhost:8000/elasticsearch/plugins' -%}
+{%   set url_root = 'http://elasticsearch-docker-artifact-server:8000/elasticsearch/distribution/tar/build/distributions' -%}
+{%   set x_pack_url_root = 'http://elasticsearch-docker-artifact-server:8000/x-pack-elasticsearch/plugin/build/distributions' -%}
+{%   set plugin_url_root = 'http://elasticsearch-docker-artifact-server:8000/elasticsearch/plugins' -%}
 {% elif staging_build_num -%}
 {%   set version_tag = version_tag + '-' + staging_build_num -%}
 {%   set url_root = 'https://staging.elastic.co/%s/downloads/elasticsearch' % version_tag -%}
