Update Docker image to use JDK 11 (#200)
This commit updates the Docker images to use JDK 11.

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -37,9 +37,8 @@
 FROM centos:7 AS prep_es_files
 
 ENV PATH /usr/share/elasticsearch/bin:$PATH
-ENV JAVA_HOME /usr/lib/jvm/jre-1.8.0-openjdk
-
-RUN yum install -y java-1.8.0-openjdk-headless unzip which
+RUN curl -s https://download.java.net/java/ga/jdk11/openjdk-11_linux-x64_bin.tar.gz | tar -C /opt -zxf -
+ENV JAVA_HOME /opt/jdk-11
 
 RUN groupadd -g 1000 elasticsearch && \
     adduser -u 1000 -g 1000 -d /usr/share/elasticsearch elasticsearch
@@ -90,13 +89,13 @@ FROM centos:7
 
 ENV ELASTIC_CONTAINER true
 
-RUN curl -s https://download.java.net/java/GA/jdk10/10.0.2/19aef61b38124481863b1413dce1855f/13/openjdk-10.0.2_linux-x64_bin.tar.gz | tar -C /opt -zxf -
-ENV JAVA_HOME /opt/jdk-10.0.2
+RUN curl -s https://download.java.net/java/ga/jdk11/openjdk-11_linux-x64_bin.tar.gz | tar -C /opt -zxf -
+ENV JAVA_HOME /opt/jdk-11
 
 # Replace OpenJDK's built-in CA certificate keystore with the one from the OS
 # vendor. The latter is superior in several ways.
 # REF: https://github.com/elastic/elasticsearch-docker/issues/171
-RUN ln -sf /etc/pki/ca-trust/extracted/java/cacerts /opt/jdk-10.0.2/lib/security/cacerts
+RUN ln -sf /etc/pki/ca-trust/extracted/java/cacerts /opt/jdk-11/lib/security/cacerts
 
 RUN yum update -y && \
     yum install -y nc unzip wget which && \
