Fix template source comment in docker-compose.yml

--- a/.tedi/template/docker-compose.yml.j2
+++ b/.tedi/template/docker-compose.yml.j2
@@ -1,5 +1,5 @@
 ---
-# This file was generated from the template at tedi/docker-compose.yml.j2
+# This file was generated from the template at .tedi/template/docker-compose.yml.j2
 version: '2.1'
 services:
   elasticsearch1:
